Change flex alignment for table to avoid having it auto sized by sibling elements

--- a/website/bhamon_build_website/static/generic.css
+++ b/website/bhamon_build_website/static/generic.css
@@ -322,6 +322,7 @@ form button
 {
 	display: flex;
 	flex-direction: column;
+	align-items: flex-start;
 }
 
 .table-container > form
